# ai-integrity-eval-lab

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: base.yaml
data/probes/: manual_probe_set.csv
notebooks/: exploratory_analysis.ipynb
scripts/: run_api.sh  run_eval.sh  run_probes.sh  run_train.sh
src/: api.py  config.py  data.py  evaluate_model.py  predict.py  preprocess.py  run_probes.py  train.py  utils.py
tests/: test_predict.py  test_preprocess.py
